[tool.poetry]
name = "typer-cli"
version = "0.1.0"
description = ""
authors = ["Daniel Macuare <danielmacuare.uk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.9.0", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
