[tool.poetry]
name = "typer-cli"
version = "0.1.0"
description = "Sample Code to create CLI Apps with Typer"
authors = ["Daniel Macuare"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.9.0", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
